; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_iseries_veth.c_veth_flush_acks.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_iseries_veth.c_veth_flush_acks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.veth_lpar_connection = type { i32, i64, i32 }

@VETH_EVENT_FRAMES_ACK = common dso_local global i32 0, align 4
@HvLpEvent_Rc_Good = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [44 x i8] c"Failed acking frames from LPAR %d, rc = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.veth_lpar_connection*)* @veth_flush_acks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @veth_flush_acks(%struct.veth_lpar_connection* %0) #0 {
  %2 = alloca %struct.veth_lpar_connection*, align 8
  %3 = alloca i64, align 8
  store %struct.veth_lpar_connection* %0, %struct.veth_lpar_connection** %2, align 8
  %4 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %2, align 8
  %5 = load i32, i32* @VETH_EVENT_FRAMES_ACK, align 4
  %6 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %2, align 8
  %7 = getelementptr inbounds %struct.veth_lpar_connection, %struct.veth_lpar_connection* %6, i32 0, i32 0
  %8 = call i64 @veth_signaldata(%struct.veth_lpar_connection* %4, i32 %5, i32 0, i32* %7)
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @HvLpEvent_Rc_Good, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %2, align 8
  %14 = getelementptr inbounds %struct.veth_lpar_connection, %struct.veth_lpar_connection* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = load i64, i64* %3, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i32 @veth_error(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %17)
  br label %19

19:                                               ; preds = %12, %1
  %20 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %2, align 8
  %21 = getelementptr inbounds %struct.veth_lpar_connection, %struct.veth_lpar_connection* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  %22 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %2, align 8
  %23 = getelementptr inbounds %struct.veth_lpar_connection, %struct.veth_lpar_connection* %22, i32 0, i32 0
  %24 = call i32 @memset(i32* %23, i32 255, i32 4)
  ret void
}

declare dso_local i64 @veth_signaldata(%struct.veth_lpar_connection*, i32, i32, i32*) #1

declare dso_local i32 @veth_error(i8*, i32, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
